--- a/TOP_website/style.css
+++ b/TOP_website/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family:'Times New Roman', Times, serif;
+    font-family:Roboto;
     margin: 0;
     padding: 0;
 }
@@ -75,8 +75,6 @@ a{
     width: 350px;
     margin-left: 60px;
     /*border: 5px solid white; /*for debugging*/
-
-
 }
 
 img{
@@ -90,5 +88,4 @@ img{
     border-radius: 8px;
     background: rgb(39, 142, 220);
     padding: 5px 16px;
-
 }
