--- a/TOP_website/style.css
+++ b/TOP_website/style.css
@@ -10,6 +10,7 @@ body{
     display: flex;
     flex-direction: column;
     display: flex;   
+    margin-bottom: 40px;
 }
 
 .header{
@@ -77,15 +78,77 @@ a{
     /*border: 5px solid white; /*for debugging*/
 }
 
-img{
+.content-item-right img{
     width: 300px;
     height: 150px;
 }
 
-.button button{
+.button-1 button{
     color: white;
     border: none;
     border-radius: 8px;
     background: rgb(39, 142, 220);
     padding: 5px 16px;
+}
+
+.second-container{
+    margin-bottom: 60px;
+}
+
+.sec-header{
+    font-size: 32px;
+    color: #1F2937;
+    font-weight: 900;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.items-container{
+    display: flex;
+    justify-content: center;
+    gap: 48px;
+
+}
+
+.items{
+    max-width: 100px;
+    flex-wrap: wrap;
+    font-size: 12px;
+    color: #8b909b;
+}
+
+.image-info{
+    border: 3px solid #3882F6;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    margin-bottom: 8px;
+}
+
+.third-container{
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    padding: 60px;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote{
+    font-size: 24px;
+    font-style: italic;
+    color: #1F2937;
+    font-weight: 100;
+    display: flex;
+    max-width: 400px;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+}
+
+.author{
+    font-size: 16px;
+    color: #1F2937;
+    width: 350px;
+    display: flex;
+    justify-content: flex-end;
 }
