--- a/TOP_website/style.css
+++ b/TOP_website/style.css
@@ -87,7 +87,7 @@ a{
     color: white;
     border: none;
     border-radius: 8px;
-    background: rgb(39, 142, 220);
+    background: #3882F6;
     padding: 5px 16px;
 }
 
@@ -132,6 +132,7 @@ a{
     padding: 60px;
     justify-content: center;
     align-items: center;
+    margin-bottom: 30px;
 }
 
 .quote{
@@ -151,4 +152,47 @@ a{
     width: 350px;
     display: flex;
     justify-content: flex-end;
+}
+
+.fourth-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+}
+
+.modal{
+    display: flex;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 40px 75px;
+    width: 600px;
+}
+
+.modal-left{
+    flex: 1;
+}
+
+.modal-top{
+    margin-bottom: 3px;
+    color: #F9FAF8;
+    font-size: 20px;
+}
+
+.modal-text{
+    color: #E5E7EB;
+    font-size: 15px;
+}
+
+.modal-right{
+    display: flex;
+    align-items: center;
+}
+
+.button-2 button{
+    background-color: transparent;
+    border-radius: 10px;
+    border: 2px solid white;
+    padding: 5px 20px;
+    color: #F9FAF8;
 }
